<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/title_text" android:textColor="@color/primary_black" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_margin" android:text="@string/title" />
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/normal_margin" android:layout_marginBottom="@dimen/normal_margin" android:src="@mipmap/sysu" />
    <TableLayout android:id="@id/base_mode" android:paddingLeft="@dimen/small_margin" android:paddingRight="@dimen/small_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/normal_margin" android:stretchColumns="1">
        <TableRow android:layout_marginBottom="@dimen/small_margin">
            <TextView android:text="@string/username_title" style="@style/my_edittext_title_style" />
            <EditText android:id="@id/base_username" android:hint="@string/username_hint" style="@style/my_base_edittext_style" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/password_title" style="@style/my_edittext_title_style" />
            <EditText android:id="@id/base_password" android:hint="@string/password_hint" android:inputType="textPassword" style="@style/my_base_edittext_style" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/expand_mode" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/normal_margin" android:layout_marginEnd="@dimen/normal_margin">
        <android.support.design.widget.TextInputLayout android:id="@id/more_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/small_margin">
            <EditText android:hint="@string/username_hint" style="@style/my_more_edittext_style" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@id/more_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/small_margin">
            <EditText android:hint="@string/password_hint" android:inputType="textPassword" style="@style/my_more_edittext_style" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <RadioGroup android:layout_gravity="center" android:orientation="horizontal" android:id="@id/parent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/normal_margin">
        <RadioButton android:id="@id/student" android:checked="true" android:text="@string/student" style="@style/my_radio_button_style" />
        <RadioButton android:id="@id/teacher" android:text="@string/teacher" style="@style/my_radio_button_style" />
        <RadioButton android:id="@id/group" android:text="@string/group" style="@style/my_radio_button_style" />
        <RadioButton android:id="@id/manager" android:layout_marginRight="@dimen/no_margin" android:text="@string/manager" style="@style/my_radio_button_style" />
    </RadioGroup>
    <LinearLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@id/login" android:layout_marginRight="@dimen/normal_margin" android:text="@string/login_button_text" style="@style/my_button_style" />
        <Button android:id="@id/register" android:text="@string/register_button_text" style="@style/my_button_style" />
    </LinearLayout>
</LinearLayout>